# SOIL2

./: .gitignore  CMakeLists.txt  README.md
src/SOIL2/: SOIL2.c  SOIL2.h  image_DXT.c  image_DXT.h  jo_jpeg.h
